force-app/main/default/objects/Credit_Limit_Application_RR_INFO__c/Credit_Limit_Application_RR_INFO__c.object-meta.xml
<CustomObject>
    <label>Credit Limit Application RR INFO</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Credit Limit Application  RR INFO No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Limit Application RR INFO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>