force-app/main/default/objects/Credit_Limit_Application_RR_INFO__c/fields/Audit_Node__c.field-meta.xml
<CustomField>
    <fullName>Audit_Node__c</fullName>
    <label>Audit Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>