force-app/main/default/objects/Credit_Limit_Application_RR_INFO__c/fields/Audit_Person__c.field-meta.xml
<CustomField>
    <fullName>Audit_Person__c</fullName>
    <label>Audit Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>