force-app/main/default/objects/Credit_Limit_Application_RR_INFO__c/fields/Audti_Limit__c.field-meta.xml
<CustomField>
    <fullName>Audti_Limit__c</fullName>
    <label>Audti Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>