force-app/main/default/objects/Credit_Limit_Application_RR_INFO__c/fields/Audti_Term__c.field-meta.xml
<CustomField>
    <fullName>Audti_Term__c</fullName>
    <label>Audti Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>