force-app/main/default/objects/Credit_Limit_Application_RR_INFO__c/fields/Credit_Limit_No__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_No__c</fullName>
    <label>Credit Limit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>